# social_network_project

./: .gitignore  Makefile
social_backend/: Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
social_backend/account/: admin.py  managers.py  models.py  permissions.py  services.py  urls.py  views.py
social_backend/account/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_username.py  0002_mymodel.py  0003_alter_user_managers_alter_user_email.py  0003_user_current_page.py  0004_profile.py  0004_remove_user_current_page.py  0005_alter_profile_avatar_alter_profile_bio.py  0005_remove_user_title_alter_user_username.py  0006_user_roles.py  0007_rename_roles_user_roles.py  0008_remove_user_roles_alter_user_role.py  0009_delete_mymodel.py
social_backend/account/serializers/: user_serializer.py
social_backend/page/: admin.py  email_sender.py  mixins.py  models.py  page_permissions.py  permissions.py  producer.py  services.py  signals.py  urls.py  views.py
social_backend/page/migrations/: 0001_initial.py  0002_comment_alter_page_name_post_like_dislike_and_more.py  0003_remove_dislike_page_remove_like_page_dislike_author_and_more.py
social_backend/page/serializers/: page_serializer.py
social_backend/page/services/: page_services.py  post_services.py
social_backend/social_backend/: asgi.py  celery.py  settings.py  urls.py
social_backend/tests/: conftest.py  test_user.py
social_frontend/: README.md  package-lock.json  package.json
social_frontend/src/: App.vue
social_frontend/src/components/: Toast.vue  (+2 more)
(+6 files in other folders)
